--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "sourceMap": true,
+    "inlineSources": true,
     "incremental": true,
     "plugins": [
       {
